# small-cpp-projects

./: .gitignore  CMakeLists.txt  README.md
lls/: README.md  fitter.cpp  graphdatareader.cpp  graphdatareader.h  leastsquares.cpp  leastsquares.h  main.cpp  makefile  matrices.cpp  matrices.h  polyfitter
threadpool/: CMakeLists.txt  test.cpp  threadpool.cpp  threadpool.hpp
